[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "d2txt"
author = "pastelmind"
author-email = "keepyourhonor@gmail.com"
home-page = "https://github.com/pastelmind/d2txt"
requires = [
    "qtoml >= 0.3.0, < 1",
    "toml >= 0.10.1, < 1",
]
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
]
requires-python = ">= 3.6"

[tool.flit.scripts]
d2txt = "d2txt:main"

[tool.flit.sdist]
exclude = [
    ".*",
    "requirements*.txt",
    "tests/",
]

[tool.isort]
# Based on sample isort config at:
#   https://github.com/psf/black#how-black-wraps-lines
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = [
    "var",
    "venv",
]

[tool.pylint.messages-control]
disable = """
    bad-continuation,
"""
