[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "d2txt"
author = "pastelmind"
author-email = "keepyourhonor@gmail.com"
home-page = "https://github.com/pastelmind/d2txt"
requires = [
    "qtoml >= 0.3.1, < 1",
    "toml >= 0.10.1, < 1",
]
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">= 3.6"

[tool.flit.scripts]
d2txt = "d2txt:main"

[tool.flit.sdist]
exclude = [
    ".*",
    "requirements*.txt",
    "tests/",
]

[tool.isort]
profile = "black"

[tool.pylint.messages-control]
disable = """
    bad-continuation,
"""
